fix(traffic): on settings dialog on mobile hide traffic section description
closes #306

--- a/apps/mapview/src/app/components/dialogs/settings-dialog/traffic-settings/traffic-settings.component.scss
+++ b/apps/mapview/src/app/components/dialogs/settings-dialog/traffic-settings/traffic-settings.component.scss
@@ -21,3 +21,13 @@ form,
 .error {
   color: var(--alert-color);
 }
+
+mat-panel-description {
+  display: none;
+}
+
+@media screen and (width > 500px) {
+  mat-panel-description {
+    display: flex;
+  }
+}
